# pytorch-transformer

./: .gitignore  README.md  pyproject.toml
notebooks/: simple_tests.ipynb
transformer/: losses.py  metrics.py  model.py  optim.py  trainer.py  utils.py
